# neo-c1-5

./: Makefile.in  README.md  TODO  ]  a.c  a.c.i  a.c.ll.pp  a.c.pp  a.rb  aaa  b.rb  config.h.in  configure  configure.in  download_to_client.sh  home_all_build.sh  mini-lang.l  mini-lang.y  neo-c2.h  pre-neo-c2.h  tags  update_neo_c.sh  upload_to_server.sh
autom4te.cache/: output.0  requests  traces.0
code/: HelloWorld  HelloWorld.c  HelloWorld.c.ll  HelloWorld.ll  HelloWorld.pp  HelloWorld2.c.ll  aaa.h  aaa.h.ll  neo-c2.h.ll
sevenstars2/: Makefile.in  all_build.sh  configure  configure.in  neo-c2.h
sevenstars2/src/: common.h  compiler.c  compiler.c.pp  interpreter.c  parser.c
src/: buffer.c  common.h  compile.cpp  compile.cpp~  compiler.c  klass.c  main.c  memalloc-stdc.c  node.c  node_type.c  parser.l  parser.y  typedef.c  vtable.c  xfunc.c  xfunc.h
